--- a/resources/collector-config.yaml
+++ b/resources/collector-config.yaml
@@ -27,7 +27,7 @@ service:
   extensions: [health_check]
   telemetry:
     logs:
-      level: debug
+      level: info
   pipelines:
     traces:
       receivers: [otlp]
