--- a/message-processor/src/main/resources/application.yml
+++ b/message-processor/src/main/resources/application.yml
@@ -31,3 +31,10 @@ otel:
     exporter: none
   logs:
     exporter: none
+
+logging:
+  file:
+    name: ./logs/app.log
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level %logger{36} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level %logger{36} - %msg%n"
