--- a/resources/fluent-bit.conf
+++ b/resources/fluent-bit.conf
@@ -1,17 +1,27 @@
 [SERVICE]
     Flush        5
-    Daemon       Off
     Log_Level    info
-    Parsers_File parsers.conf
+    Parsers_File /fluent-bit/etc/parsers.conf
 
 [INPUT]
-    Name  forward
-    Listen 0.0.0.0
-    Port  24224
+    Name         tail
+    Path         /logs/*/*.log
+    Tag          service.*
+    Multiline    on
+    Parser_Firstline  multiline_java
+    Refresh_Interval 5
+    Path_Key     filepath
+
+[FILTER]
+    Name         modify
+    Match        service.*
+    Add          env dev
 
 [OUTPUT]
-    Name        loki
-    Match       *
-    Uri         http://loki-201:3100/loki/api/v1/push
-    Labels      job=fluentbit,host=${HOSTNAME}
-    Retry_Limit False
+    Name         loki
+    Match        service.*
+    Host         loki
+    Port         3100
+    Labels       job=springboot
+    Label_keys   $filepath,$trace_id,$span_id
+    Line_format  json
