--- a/resources/loki-config.yml
+++ b/resources/loki-config.yml
@@ -1,5 +1,8 @@
+auth_enabled: false
+
 server:
   http_listen_port: 3100
+  http_listen_address: 0.0.0.0
 
 common:
   path_prefix: /loki
@@ -23,8 +26,13 @@ schema_config:
         period: 24h
 
 limits_config:
+  # Move query timeout into limits_config (not under querier)
+  query_timeout: 10m
+  # retention (optional)
   retention_period: 168h
   allow_structured_metadata: false
+  # control parallelism if needed:
+  max_query_parallelism: 1024
 
 ingester:
   lifecycler:
@@ -41,11 +49,3 @@ ingester:
 compactor:
   working_directory: /loki/compactor
 
-query_range:
-  parallelise_shardable_queries: true
-
-ruler:
-  storage:
-    type: local
-    local:
-      directory: /loki/rules
