--- a/resources/fluent-bit.conf
+++ b/resources/fluent-bit.conf
@@ -1,16 +1,16 @@
 [SERVICE]
-    Flush        5
-    Log_Level    info
-    Parsers_File /fluent-bit/etc/parsers.conf
+    Flush           5
+    Log_Level       info
+    Parsers_File    /fluent-bit/etc/parsers.conf
 
 [INPUT]
-    Name         tail
-    Path         /logs/*/*.log
-    Tag          service.*
-    Multiline    on
-    Parser_Firstline  multiline_java
-    Refresh_Interval 5
-    Path_Key     filepath
+    Name                tail
+    Path                /logs/*/*.log
+    Tag                 service.*
+    Multiline           on
+    Parser_Firstline    multiline_java
+    Refresh_Interval    5
+    Path_Key            filepath
 
 [FILTER]
     Name         modify
@@ -22,6 +22,6 @@
     Match        service.*
     Host         loki
     Port         3100
-    Labels       job=springboot
+    Labels       service_name=$service.name
     Label_keys   $filepath,$trace_id,$span_id
     Line_format  json
