--- a/resources/prometheus.yml
+++ b/resources/prometheus.yml
@@ -2,9 +2,11 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: "otel-collector"
+  - job_name: "otel-collector-spanmetrics"
     static_configs:
-      - targets: ["otel-collector-201:8888"]
+      - targets: ["otel-collector-201:8889"]
 
 remote_write:
   - url: "http://mimir-201:9009/api/v1/push"
+    headers:
+      X-Scope-OrgID: "1"
