Changes in the Loki and fluent bit config

--- a/resources/fluent-bit.conf
+++ b/resources/fluent-bit.conf
@@ -7,8 +7,7 @@
     Name                tail
     Path                /logs/*/*.log
     Tag                 service.*
-    Multiline           on
-    Parser_Firstline    multiline_java
+    Parser              json
     Refresh_Interval    5
     Path_Key            filepath
 
@@ -22,6 +21,6 @@
     Match        service.*
     Host         loki
     Port         3100
-    Labels       service_name=$service.name
+    Labels       job=fluentbit, env=$env, service_name=$service_name, trace_id=$trace_id, span_id=$span_id
     Label_keys   $filepath,$trace_id,$span_id
-    Line_format  json
+    Line_format  key_value
