--- a/resources/parsers.conf
+++ b/resources/parsers.conf
@@ -1,6 +1,3 @@
 [PARSER]
-    Name          multiline_java
-    Format        regex
-    Regex         ^\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
-    Multiline     On
-    Flush_Timeout 1000
+    Name        json
+    Format      json
